Se agregaron las etiquetas de texto mas importantes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Computer Shop</title>
 </head>
 <body>
 
-    <h1> Hello Word! </h1>
+    <h1> Computer Shop </h1>
+
+    <h2> Tienda Online de Computadoras </h2>
+
+    <p> Paris, Francia</p>
+
+    <h2> Catálogo </h2>
+
+    <h3> Desktop </h3>
+    <p> Praesent porttitor lacus ac libero malesuada, id cursus erat egestas. Praesent vel est ac massa consequat sollicitudin. Vestibulum consectetur, ipsum et eleifend consectetur, felis nisl sollicitudin leo, a porta eros odio non nisi. </p>
+    
+    <h3> Laptop </h3>
+    <p> Praesent porttitor lacus ac libero malesuada, id cursus erat egestas. Praesent vel est ac massa consequat sollicitudin. Vestibulum consectetur, ipsum et eleifend consectetur, felis nisl sollicitudin leo, a porta eros odio non nisi. </p>
+
+    <h3> Tablet </h3>
+    <p> Praesent porttitor lacus ac libero malesuada, id cursus erat egestas. Praesent vel est ac massa consequat sollicitudin. Vestibulum consectetur, ipsum et eleifend consectetur, felis nisl sollicitudin leo, a porta eros odio non nisi. </p>
+
+    <h2> Contacto </h2>
+
+    <p> Todos los derechos reservados. CoksDev</p>
     
 </body>
 </html>
