Se agrego imágenes y el formulario

--- a/index.html
+++ b/index.html
@@ -31,22 +31,51 @@
         
         <section>
             <h3> Desktop </h3>
+            <img src="/img/desktop.jpg" alt="desktop" width="240px" height="240px">
             <p> Praesent porttitor lacus ac libero malesuada, id cursus erat egestas. Praesent vel est ac massa consequat sollicitudin. Vestibulum consectetur, ipsum et eleifend consectetur, felis nisl sollicitudin leo, a porta eros odio non nisi. </p>
         </section>
         
         <section>
             <h3> Laptop </h3>
+            <img src="/img/laptop.jpg" alt="desktop" width="240px" height="240px">
             <p> Praesent porttitor lacus ac libero malesuada, id cursus erat egestas. Praesent vel est ac massa consequat sollicitudin. Vestibulum consectetur, ipsum et eleifend consectetur, felis nisl sollicitudin leo, a porta eros odio non nisi. </p>
         </section>
 
         <section>
             <h3> Tablet </h3>
+            <img src="/img/tablet.jpg" alt="desktop" width="240px" height="240px">
             <p> Praesent porttitor lacus ac libero malesuada, id cursus erat egestas. Praesent vel est ac massa consequat sollicitudin. Vestibulum consectetur, ipsum et eleifend consectetur, felis nisl sollicitudin leo, a porta eros odio non nisi. </p>
         </section>
     </main>
 
     <section>
         <h2> Contacto </h2>
+
+        <form action="">
+            <fieldset>
+                <legend>Contactanos llenando todos los campos</legend>
+
+                <div>
+                    <label for="">Nombre</label>
+                    <input type="text" placeholder="Tu nombre">
+                </div>
+                <div>
+                    <label for="">Teléfono</label>
+                    <input type="tel" placeholder="Tu teléfono">
+                </div>
+                <div>
+                    <label for="">Correo</label>
+                    <input type="email" placeholder="Tu email">
+                </div>
+                <div>
+                    <label for="">Mensaje</label>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                </div>
+                <div>
+                    <input type="sumit" value="Enviar">
+                </div>
+            </fieldset>
+        </form>
     </section>
 
     <footer>
