Se agrego el archivo css externo y se añadio añgunos estilos en el nav

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computer Shop</title>
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="preload" href="css/styles.css" as="style">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 
@@ -12,14 +15,16 @@
         <h1> Computer Shop </h1>
     </header>
 
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Nosotros</a>
-        <a href="#">Clientes</a>
-        <a href="#">Contactos</a>
-    </nav>
+    <div class="nav-bg">
+        <nav class="nav-main content">
+            <a href="#">Inicio</a>
+            <a href="#">Nosotros</a>
+            <a href="#">Clientes</a>
+            <a href="#">Contactos</a>
+        </nav>
+    </div>
 
-    <section>
+    <section class="section-main">
         <h2> Tienda Online de Computadoras </h2>
         <p> Paris, Francia</p>
 
