Se agrego e banner

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
         <h1> Computer Shop </h1>
     </header>
-
+    
     <div class="nav-bg">
-        <nav class="nav-main content">
+        <nav class="content">
             <a href="#">Inicio</a>
             <a href="#">Nosotros</a>
             <a href="#">Clientes</a>
@@ -24,11 +24,13 @@
         </nav>
     </div>
 
-    <section class="section-main">
-        <h2> Tienda Online de Computadoras </h2>
-        <p> Paris, Francia</p>
-
-        <a href="#">Contactar</a>
+    <section class="banner">
+        <div class="banner__content">
+            <h2> Tienda Online de Computadoras </h2>
+            
+            <p> Paris, Francia</p>
+            <a href="#">Contactar</a>
+        </div>
     </section>
 
     <main>
