style: :art: se modifico en boton y los derechos

--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
               </div>
             </div>
             <div class="flex-end">
-              <input class="button w-sm-100" type="sumit" value="enviar" />
+              <input class="button w-sm-100" type="submit" value="enviar" />
             </div>
           </fieldset>
         </form>
       </section>
     </main>
     <footer>
-      <p class="center">Todos los derechos reservados. CoksDev</p>
+      <p class="center">Todos los derechos reservados. xeyrjo</p>
     </footer>
   </body>
 </html>
